--- a/index.html
+++ b/index.html
@@ -367,19 +367,19 @@
                         A mobile application that connects travelers with local guides for personalized experiences. Available on iOS, Android, and Huawei AppGallery.
                     </p>
                     <p><strong>Technologies:</strong> Flutter, Firebase, FCM, OTP, Payment System, Provider, MVVM, Atomic Design</p>
-                    <p><strong>Features:</strong> Multi-language support, user-generated content (articles, photos and videos), real-time messaging.</p>
+                    <p><strong>Features:</strong> Multi-language support, user-generated content (articles, photos and videos), real-time messaging, secure payment, evaluate guides.</p>
                     <div class="project-links">
                         <a href="https://apps.apple.com/us/app/ayotravel/id6475484468" target="_blank">App Store</a>
                         <a href="https://play.google.com/store/apps/details?id=com.ayotravel" target="_blank">Play Store</a>
                         <a href="https://appgallery.huawei.com/app/C104839325" target="_blank">AppGallery</a>
                     </div>
                 </div>
-                 <div class="card">
+                 /*<div class="card">
                     <h3>Upcoming AI/Python Projects</h3>
                     <p>
                         New projects focusing on NLP, LLM fine-tuning, and other Deep Learning applications will be added here soon.
                     </p>
-                </div>
+                </div>*/
             </div>
         </div>
     </section>
