--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 <img src="images/profile.png" alt="Muhammed Gazali Yeşilmen" class="profile-img">
                 <div class="about-text">
                     <p>
-                        I'm a software developer with deep expertise in Flutter and Firebase. I founded AyoTech and developed the AyoTravel project from scratch, which was launched in March 2024 on App Store and Play Store. With a strong entrepreneurial background and hands-on experience in both technical development and business strategy, I’m now focusing on AI – especially LLMs, NLP, and Deep Learning. I’m currently enhancing my Python and AI skills and preparing to contribute to innovative projects.
+                        I'm a software developer with deep expertise in Flutter and Firebase. I founded AyoTech and developed the AyoTravel project from scratch, which was launched in March 2024 on App Store and Play Store. With a strong entrepreneurial background and hands-on experience in both technical development and business strategy, I’m now focusing on AI, especially LLMs, NLP, and Deep Learning. I’m currently enhancing my Python and AI skills and preparing to contribute to innovative projects.
                     </p>
                 </br>
             <a href="https://www.linkedin.com/in/muhammedyesilmen/" target="_blank" title="LinkedIn">
@@ -340,7 +340,7 @@
                      <ul>
                         <li>Was responsible for the entire mobile development of a stock market application.</li>
                         <li>Translated Figma UI designs into Flutter code, structured backend logic, and connected API data models.</li>
-                        <li>Implemented secure and responsive communication between the app and server.]</li>
+                        <li>Implemented secure and responsive communication between the app and server.</li>
                     </ul>
                 </div>
                 <div class="card">
