--- a/index.html
+++ b/index.html
@@ -348,8 +348,7 @@
                     <p class="job-title">Flutter Developer</p>
                     <p class="date">July 2020 – February 2021</p>
                     <ul>
-                        <li>Worked on a privacy-focused mobile project called Al Trainer.</li>
-                        <li>Built encryption-based configurations for Android and iOS platforms to ensure secure personal data handling.</li>
+                        <li>Worked on a privacy-focused mobile projects</li>
                     </ul>
                 </div>
             </div>
