--- a/index.html
+++ b/index.html
@@ -374,6 +374,19 @@
                     </div>
                 </div>
             </div>
+            <div class="card-container">
+                <div class="card">
+                    <h3>Handvibe</h3>
+                    <p>
+                       A Flutter mobile platform that allows users to sell their handcrafted products
+                    </p>
+                    <p><strong>Technologies:</strong> Flutter, Firebase, FCM, Provider, MVVM, Atomic Design</p>
+                    <p><strong>Features:</strong> Multi-language support, real-time messaging, product listings, and seller ratings.</p>
+                    <div class="project-links">
+                        <a href="https://github.com/mgy-programmer/handvibe" target="_blank">Github</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
