--- a/index.html
+++ b/index.html
@@ -400,9 +400,13 @@
             <div class="skills-container">
                 <span class="skill-badge">Dart</span>
                 <span class="skill-badge">Python</span>
+                <span class="skill-badge">Java</span>
+                <span class="skill-badge">C#</span>
+                <span class="skill-badge">C++</span>
                 <span class="skill-badge">Flutter</span>
                 <span class="skill-badge">Firebase</span>
                 <span class="skill-badge">FCM</span>
+                <span class="skill-badge">SQL</span>
                 <span class="skill-badge">OOP</span>
                 <span class="skill-badge">MVVM</span>
                 <span class="skill-badge">Atomic Design</span>
