--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <p class="lead">Software Developer</p>
             <h1>Muhammed Gazali Yeşilmen</h1>
             <p class="subtitle">
-                I’m a software developer with a strong background in Flutter and a growing passion for Artificial Intelligence. My journey started with mobile app development and evolved into building scalable, smart, and user-centric solutions.
+                My technical experience in mobile development with Flutter provided me with a deep understanding of user needs. In my career, I have leveraged this insight to move beyond coding, focusing on leading teams to build user-centric solutions and shape strategic product vision. My goal is to create valuable products that bridge the gap between technology and people.
             </p>
         </div>
     </section>
@@ -299,7 +299,7 @@
                 <img src="images/profile.png" alt="Muhammed Gazali Yeşilmen" class="profile-img">
                 <div class="about-text">
                     <p>
-                        I'm a software developer with deep expertise in Flutter and Firebase. I founded AyoTech and developed the AyoTravel project from scratch, which was launched in March 2024 on App Store and Play Store. With a strong entrepreneurial background and hands-on experience in both technical development and business strategy, I’m now focusing on AI, especially LLMs, NLP, and Deep Learning. I’m currently enhancing my Python and AI skills and preparing to contribute to innovative projects.
+                        I am the founder of AyoTech and the developer of the AyoTravel app, a project I built from the ground up using Flutter and Firebase, successfully launching it in March 2024. This end-to-end experience has strengthened my ability to bridge technical execution with business objectives. I am now eager to apply my expertise to ambitious projects, turning complex ideas into market-ready products.
                     </p>
                 </br>
             <a href="https://www.linkedin.com/in/muhammedyesilmen/" target="_blank" title="LinkedIn">
