Add experience section for SendPal Global Inc.
Added job experience details for SendPal Global Inc.

--- a/index.html
+++ b/index.html
@@ -324,6 +324,16 @@
             <h2>💼 Experience</h2>
             <div class="card-container">
                 <div class="card">
+                    <h3>SendPal Global Inc.</h3>
+                    <p class="job-title">Mobile Developer</p>
+                    <p class="date">September 2025 — Present</p>
+                    <ul>
+                        <li>Developed mobile features with React Native; integrated RESTful APIs and managed dynamic data flow</li>
+                        <li>Maintained core features ensuring efficient API communication and seamless cross-platform experience.</li>
+                        <li>Collaborated on architectural improvements and UI refinements for performance and scalability.</li>
+                    </ul>
+                </div>
+                <div class="card">
                     <h3>AyoTech Software Technologies Inc.</h3>
                     <p class="job-title">Founder</p>
                     <p class="date">September 2022 – May 2025</p>
