Modify experience section for SendPal role
Updated job title and added detailed role description for SendPal.

--- a/index.html
+++ b/index.html
@@ -325,12 +325,14 @@
             <div class="card-container">
                 <div class="card">
                     <h3>SendPal Global Inc.</h3>
-                    <p class="job-title">Mobile Developer</p>
+                    <p class="job-title">Technical Product Advisor</p>
                     <p class="date">September 2025 — Present</p>
+                    <p>I serve as a strategic technical advisor for SendPal, a US-based peer-to-peer crowd-shipping platform. My role focuses on high-level mobile architecture and product feasibility rather than daily coding.</p>
+                    <p>Key Contributions:</p>
                     <ul>
-                        <li>Developed mobile features with React Native; integrated RESTful APIs and managed dynamic data flow</li>
-                        <li>Maintained core features ensuring efficient API communication and seamless cross-platform experience.</li>
-                        <li>Collaborated on architectural improvements and UI refinements for performance and scalability.</li>
+                        <li>Marketplace Strategy: Advising on the technical implementation of connecting travelers with parcel senders effectively.</li>
+                        <li>Trust & Safety Architecture: Guiding the team on implementing secure Escrow payment models and Identity Verification flows to build community trust.</li>
+                        <li>Technologies involved in the project: React Native, Node.js, Maps APIs, Payment Gateways.</li>
                     </ul>
                 </div>
                 <div class="card">
