Bold 'Key Contributions' in job description

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                     <p class="job-title">Technical Product Advisor</p>
                     <p class="date">September 2025 — Present</p>
                     <p>I serve as a strategic technical advisor for SendPal, a US-based peer-to-peer crowd-shipping platform. My role focuses on high-level mobile architecture and product feasibility rather than daily coding.</p>
-                    <p>Key Contributions:</p>
+                    <p><strong>Key Contributions:</strong></p>
                     <ul>
                         <li>Marketplace Strategy: Advising on the technical implementation of connecting travelers with parcel senders effectively.</li>
                         <li>Trust & Safety Architecture: Guiding the team on implementing secure Escrow payment models and Identity Verification flows to build community trust.</li>
