Bold key contributions in index.html

--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
                     <p>I serve as a strategic technical advisor for SendPal, a US-based peer-to-peer crowd-shipping platform. My role focuses on high-level mobile architecture and product feasibility rather than daily coding.</p>
                     <p><strong>Key Contributions:</strong></p>
                     <ul>
-                        <li>Marketplace Strategy: Advising on the technical implementation of connecting travelers with parcel senders effectively.</li>
-                        <li>Trust & Safety Architecture: Guiding the team on implementing secure Escrow payment models and Identity Verification flows to build community trust.</li>
-                        <li>Technologies involved in the project: React Native, Node.js, Maps APIs, Payment Gateways.</li>
+                        <li><strong>Marketplace Strategy:</strong> Advising on the technical implementation of connecting travelers with parcel senders effectively.</li>
+                        <li><strong>Trust & Safety Architecture:</strong> Guiding the team on implementing secure Escrow payment models and Identity Verification flows to build community trust.</li>
+                        <li><strong>Technologies involved in the project:</strong> React Native, Node.js, Maps APIs, Payment Gateways.</li>
                     </ul>
                 </div>
                 <div class="card">
